# xswarm-boss

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lfsconfig  .pre-commit-config.yaml  ANALYSIS_COMPLETE.txt  AUDIO_DIFF_SUMMARY.md  AUDIO_ROOT_CAUSE_FOUND.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON_FINAL_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DEV_LOGIN_QUICK_START.md  DEV_LOGIN_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOCAL_MEMORY_LIBSQL_IMPLEMENTATION.md  MEMORY_CONDITIONER_IMPLEMENTATION.md  MOSHI_AUDIO_INVESTIGATION.md  MOSHI_AUDIO_REVERSAL_FIX.md  MOSHI_AUDIO_REVERSAL_TEST_STATUS.md  MOSHI_AUDIO_SUMMARY.md  MOSHI_GREETING_IMPLEMENTATION_PLAN.md  MOSHI_GREETING_IMPLEMENTATION_STATUS.md  MOSHI_PORT_BINDING_FIX.md  MOSHI_TEST_IMPLEMENTATION.md  MOSHI_TEST_RESULTS.md  MOSHI_VOCAB_FIX_IMPLEMENTATION.md  MOSHI_WHISPER_TESTING_IMPLEMENTATION.md  PRD.md  QUICK_REFERENCE.txt  README.md  README_ANALYSIS.md  SECURITY.md  TBD.md  TEST_CPU_MODE.sh  check_env.py  (+20 more)
.claude/: CLAUDE.md  NEXT_STEPS.md  settings.local.json
.claude/todos/: CURRENT_PROJECT.md  auth-system.md  cleanup-root-docs.md  comprehensive-testing-suite.md  dashboard-implementation.md  deployment-monitoring-system.md  production-deployment.md  sprint-1-critical-tests.md  suggestion-system.md  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
admin-pages/: buzz.html  dashboard.html  features.html  index.html  suggestions.html  terms.html
config/: production.toml  wake-word.toml
deployment/: DEPLOYMENT_SYSTEM_SUMMARY.md  README.md
docker/: Dockerfile.arch
docs/: AUDIO_BUG_VISUAL_SUMMARY.txt  AUTH_IMPLEMENTATION_COMPLETE.md  BUZZ_IMPLEMENTATION_SUMMARY.md  CONFIGURATION.md  CURRENT_TASK.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_README.md  DEVELOPMENT_STATUS.md  DEV_MODE.md  FILE_ORGANIZATION_SUMMARY.md  FINAL_STATUS.md  ICON_SELECTION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTELLEGENCE_LAYER.md  JARVIS_QUICK_START.md  MOSHI_AUDIO_DIAGNOSIS.md  MOSHI_AUDIO_FIX_COMPLETE.md  MOSHI_AUDIO_TESTING_SUMMARY.md  MOSHI_CODEBOOK_EXTRACTION_BUG.md  MOSHI_CONFIG_COMPARISON.md  MOSHI_DECODER_FIX_COMPLETE.md  MOSHI_DOWNLOAD_STATUS.md  MOSHI_GREETING_FIX_COMPLETE.md  MOSHI_INTEGRATION_NOTES.md  MOSHI_MEMORY.md  MOSHI_MLX_COMPARISON_RESULT.md  MOSHI_MLX_TEST_STATUS.md  MOSHI_PHONE_TEST_RESULTS.md  MOSHI_Q8_CONDITIONING_ANALYSIS.md  MOSHI_STREAMING_TEST.md  MOSHI_TEST_MODE.md  MOSHI_V10_TENSOR_CONCATENATION.md  OVERNIGHT_TEST_SUMMARY.md  PERSONA_ICONS.md  PHONE_INTEGRATION_SUMMARY.md  PHONE_TESTING_GUIDE.md  Q8_OFFICIAL_CLI_TEST_RESULT.md  QUICK_SUMMARY.txt  README.md  SECURITY.md  (+13 more)
personas/: AUDIO_SOURCES.md
planning/: API_QUICKSTART.md  ARCHITECTURE.md  CFFI_RESEARCH.md  CLAUDE_CODE_BRIDGE_TEST_REPORT.md  CLAUDE_CODE_WEBSOCKET_INTEGRATION.md  CLOUDFLARE_SETUP_GUIDE.md  COMPLETE_SPECIFICATION.md  CROSS_PLATFORM_BUILDS.md  DATABASE_MIGRATION_TEST_REPORT.md  DATABASE_SCHEMA.md  E2E_TESTING_GUIDE.md  EMAIL_FORWARDING.md  FEATURES.md  GIT_LFS_SETUP.md  HTTP_API_IMPLEMENTATION.md  LM_CODEBOOK_BUG_FIX.md  LM_TRANSCRIPTION_IMPLEMENTATION.md  MIGRATION_TEST_SUMMARY.txt  MOSHI_INTEGRATION.md  MOSHI_QUICKSTART.md  PRD.md  PROJECT_MANAGER_IMPLEMENTATION.md  SECURITY_GUIDE.md  SENDGRID_INBOUND_FIX.md  SENDGRID_SETUP.md  STRIPE_PRODUCTS_SETUP.md  STRIPE_SETUP.md  STRIPE_WEBHOOKS_SETUP.md  SUBSCRIPTION.md  SUPERVISOR_WEBSOCKET_INTEGRATION.md  TODO.md  TROUBLESHOOTING_GUIDE.md  TURSO_SETUP.md  TWILIO_AUDIO_ARCHITECTURE.md  TWILIO_SETUP.md
scripts/: MIGRATION_QUICKSTART.md  README-STRIPE-SETUP.md  README.md  README_SENDGRID_SCRIPTS.md  analyze-audio-waveform.py  analyze-moshi-audio.sh  analyze-waveform.py  animate-sauron-leonardo.js  animate-sauron-luma-sdk.js  animate-sauron-luma.js  animate-sauron-multi-try.js  animate-sauron-runway.js  animate-sauron.js  check-sendgrid-dns.sh  check-twilio-config.js  cleanup-webhooks.js  create_animated_header.py  deploy.sh  dev-webhook-forward.js  diagnose-sendgrid.js  download_best_icons.sh  download_persona_icons.sh  enable-sendraw-fixed.js  enable-sendraw.js  example-dev-task.js  fix-sendgrid.js  fix-sms-webhook.js  install-stripe-cli.js  load-config.js  make_moshi_call.py  migrate-buzz.js  migrate-calendar.js  migrate-db.js  migrate-tier-names.js  quiet-audio-test.sh  requirements.txt  reverse-audio-chunks.py  reverse_audio.py  revert-boss-email.js  run_twilio_server.py  (+37 more)
systemd/: xswarm-dashboard.service  xswarm-voice.service
tests/: .env.example  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SPRINT1_TEST_IMPLEMENTATION.md  comprehensive-webhook-tests.js  oauth-flows.test.js  run-all-tier-tests.js  send-personas-email.js  test-communication.js  test_audio_pipeline.py  tier-integration.test.js
(+245 files in other folders)
