[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/mcp-server",
    "packages/indexer",
    "packages/moshi/moshi-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "xSwarm - AI Orchestration Layer for Multi-Project Development"
repository = "https://github.com/chadananda/xswarm-boss"
keywords = ["ai", "orchestration", "development"]
categories = ["development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1.8"
chrono-tz = "0.10.0"
dateparser = "0.2.1"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Git integration
git2 = "0.19"

# ML/AI dependencies (for MOSHI)
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
candle-flash-attn = "0.9.1"
rayon = "1.8.1"

# MOSHI-specific dependencies
sentencepiece = "0.11.2"
hf-hub = { version = "0.4.3", features = ["tokio"] }
rubato = "0.15.0"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "native-tls"] }
futures-util = "0.3.30"
byteorder = "1.5.0"
bytes = "1"
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.28"
log = "0.4.20"
moshi = { path = "./packages/moshi/moshi-core", version = "0.6.4" }
toml = "0.8.19"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tokio-stream = "0.1"
base64 = "0.21.7"
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
color-eyre = "0.6.2"
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
env_logger = "0.10.1"
http = "1.1.0"
kaudio = "0.2.1"
lazy_static = "1.5.0"
native-tls = "0.2.11"
numpy = "0.23.0"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
prometheus = "0.13.4"
pyo3 = "0.23.0"
pyo3-ffi = "0.23.0"
ratatui = "0.27.0"
rcgen = "0.13.1"
regex = "1.10.3"
rmp-serde = "1.3.0"
rustls = "0.23.5"
sha3 = "0.10.8"
symphonia = { version = "0.5.3", features = ["all"] }
tokenizers = "0.15.2"
tokio-rustls = "0.24.1"
tracing-appender = "0.2.3"
tracing-chrome = "0.7.2"
tui-logger = "0.11.2"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
